# flow

./: 404.html  Cargo.toml  go.mod  index.html  search-doc-1758060050534.json
assets/js/: main.3d262dd4.js
concepts/: index.html
concepts/captures/: index.html
concepts/catalogs/: index.html
concepts/collections/: index.html
concepts/connectors/: index.html
concepts/derivations/: index.html
concepts/flowctl/: index.html
concepts/import/: index.html
concepts/materialization/: index.html
concepts/schemas/: index.html
concepts/storage-mappings/: index.html
concepts/tests/: index.html
concepts/web-app/: index.html
crates/gazette/: Cargo.toml
crates/gazette/src/: append.rs  dispatch.rs  lib.rs  route_constraint.rs
crates/json/: Cargo.toml
crates/protocol/: build.rs
example/: index.html
example-markdown/: index.html
examples/: flow.yaml
flow_generated/: tsconfig-files.json
flow_generated/flow/: collections.d.ts  interfaces.d.ts  registers.d.ts  routes.ts
getting-started/comparisons/: index.html
getting-started/deployment-options/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/sso-setup/: index.html
getting-started/support/: index.html
getting-started/tutorials/: index.html
getting-started/who-should-use-flow/: index.html
go/capture/: adapter.go
go/materialize/: adapter.go
go/runtime/: capture.go  connector_store.go  materialize.go
guides/: index.html
guides/connect-network/: index.html
guides/flatten-array/: index.html
private-byoc/: index.html
(+247 files in other folders)
