[workspace]
members = [ "crates/*"]

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
incremental = true
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.

[patch.'crates-io']
tonic = { path = "../tonic/tonic" }
#tonic-types = { path = "../tonic/tonic-types" }
#tonic-build = { path = "../tonic/tonic-build" }
#tonic-health = { path = "../tonic/tonic-health" }
