[package]
name = "json"
version = "0.0.0"
authors = ["Estuary Technologies, Inc"]
edition = "2018"

[dependencies]
fxhash = "*"
itertools = "*"
percent-encoding = "*"
regex = "*"
serde = "*"
serde_json = "*"
serde_yaml = "*"
thiserror = "*"
tinyvec = {version = "*", features = ["alloc", "rustc_1_40"]}
url = "*"

[dev-dependencies]
glob = "*"
